# srcs

./: Cargo.toml  README.md  config.json
src/: main.rs
src/commands/: mod.rs  scrs.rs
